fixed nav link wrapping for mobile view

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -53,7 +53,7 @@
   box-shadow: none;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 640px) {
   .nav_top_right_links,
   .top_right_link {
     width: 100%;
