--- a/src/Components/Utils/Utils.css
+++ b/src/Components/Utils/Utils.css
@@ -87,7 +87,7 @@ textarea {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
 }
 
 @media only screen and (min-width: 767px) {
@@ -98,7 +98,7 @@ textarea {
 
 @media only screen and (min-width: 1000px) {
   .BackgroundMain {
-    height: calc(100vh + 200px);
+    height: calc(100vh + 250px);
   }
 }
 
